docs-archive/apache-airflow-providers-google/19.0.0/_sources/_api/airflow/providers/google/cloud/hooks/gen_ai/index.rst.txt
airflow.providers.google.cloud.hooks.gen_ai
===========================================

.. py:module:: airflow.providers.google.cloud.hooks.gen_ai

.. autoapi-nested-parse::

   This module contains a Google Cloud GenAI Generative Model hook.



Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.hooks.gen_ai.GenAIGenerativeModelHook


Module Contents
---------------

.. py:class:: GenAIGenerativeModelHook(gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.common.hooks.base_google.GoogleBaseHook`


   Class for Google Cloud Generative AI Vertex AI hook.


   .. py:method:: get_genai_client(project_id, location)


   .. py:method:: embed_content(model, location, contents, config = None, project_id = PROVIDE_PROJECT_ID)

      Generate embeddings for words, phrases, sentences, and code.

      :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
      :param location: Required. The ID of the Google Cloud location that the service belongs to.
      :param model: Required. The model to use.
      :param contents: Optional. The contents to use for embedding.
      :param config: Optional. Configuration for embeddings.



   .. py:method:: generate_content(location, model, contents, generation_config = None, project_id = PROVIDE_PROJECT_ID)

      Make an API request to generate content using a model.

      :param location: Required. The ID of the Google Cloud location that the service belongs to.
      :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
      :param model: Required. The model to use.
      :param contents: Required. The multi-part content of a message that a user or a program
          gives to the generative model, in order to elicit a specific response.
      :param generation_config: Optional. Generation configuration settings.



   .. py:method:: supervised_fine_tuning_train(source_model, location, training_dataset, tuning_job_config = None, project_id = PROVIDE_PROJECT_ID)

      Create a tuning job to adapt model behavior with a labeled dataset.

      :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
      :param location: Required. The ID of the Google Cloud location that the service belongs to.
      :param source_model: Required. A pre-trained model optimized for performing natural
          language tasks such as classification, summarization, extraction, content
          creation, and ideation.
      :param train_dataset: Required. Cloud Storage URI of your training dataset. The dataset
          must be formatted as a JSONL file. For best results, provide at least 100 to 500 examples.
      :param tuning_job_config: Optional. Configuration of the Tuning job to be created.



   .. py:method:: count_tokens(location, model, contents, config = None, project_id = PROVIDE_PROJECT_ID)

      Use Count Tokens API to calculate the number of input tokens before sending a request to Gemini API.

      :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
      :param location: Required. The ID of the Google Cloud location that the service belongs to.
      :param contents: Required. The multi-part content of a message that a user or a program
          gives to the generative model, in order to elicit a specific response.
      :param model: Required. Model,
          supporting prompts with text-only input, including natural language
          tasks, multi-turn text and code chat, and code generation. It can
          output text and code.
      :param config: Optional. Configuration for Count Tokens.



   .. py:method:: create_cached_content(model, location, cached_content_config = None, project_id = PROVIDE_PROJECT_ID)

      Create CachedContent to reduce the cost of requests containing repeat content.

      :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
      :param location: Required. The ID of the Google Cloud location that the service belongs to.
      :param model: Required. The name of the publisher model to use for cached content.
      :param cached_content_config: Optional. Configuration of the Cached Content.



