docs-archive/apache-airflow-providers-google/19.4.0/_sources/_api/airflow/providers/google/cloud/hooks/gen_ai/index.rst.txt
airflow.providers.google.cloud.hooks.gen_ai
===========================================

.. py:module:: airflow.providers.google.cloud.hooks.gen_ai

.. autoapi-nested-parse::

   This module contains a Google Cloud GenAI Generative Model hook.



Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.hooks.gen_ai.GenAIGenerativeModelHook
   airflow.providers.google.cloud.hooks.gen_ai.GenAIGeminiAPIHook


Module Contents
---------------

.. py:class:: GenAIGenerativeModelHook(gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.common.hooks.base_google.GoogleBaseHook`


   Class for Google Cloud Generative AI Vertex AI hook.


   .. py:method:: get_genai_client(project_id, location)


   .. py:method:: embed_content(model, location, contents, config = None, project_id = PROVIDE_PROJECT_ID)

      Generate embeddings for words, phrases, sentences, and code.

      :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
      :param location: Required. The ID of the Google Cloud location that the service belongs to.
      :param model: Required. The model to use.
      :param contents: Optional. The contents to use for embedding.
      :param config: Optional. Configuration for embeddings.



   .. py:method:: generate_content(location, model, contents, generation_config = None, project_id = PROVIDE_PROJECT_ID)

      Make an API request to generate content using a model.

      :param location: Required. The ID of the Google Cloud location that the service belongs to.
      :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
      :param model: Required. The model to use.
      :param contents: Required. The multi-part content of a message that a user or a program
          gives to the generative model, in order to elicit a specific response.
      :param generation_config: Optional. Generation configuration settings.



   .. py:method:: supervised_fine_tuning_train(source_model, location, training_dataset, tuning_job_config = None, project_id = PROVIDE_PROJECT_ID)

      Create a tuning job to adapt model behavior with a labeled dataset.

      :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
      :param location: Required. The ID of the Google Cloud location that the service belongs to.
      :param source_model: Required. A pre-trained model optimized for performing natural
          language tasks such as classification, summarization, extraction, content
          creation, and ideation.
      :param train_dataset: Required. Cloud Storage URI of your training dataset. The dataset
          must be formatted as a JSONL file. For best results, provide at least 100 to 500 examples.
      :param tuning_job_config: Optional. Configuration of the Tuning job to be created.



   .. py:method:: count_tokens(location, model, contents, config = None, project_id = PROVIDE_PROJECT_ID)

      Use Count Tokens API to calculate the number of input tokens before sending a request to Gemini API.

      :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
      :param location: Required. The ID of the Google Cloud location that the service belongs to.
      :param contents: Required. The multi-part content of a message that a user or a program
          gives to the generative model, in order to elicit a specific response.
      :param model: Required. Model,
          supporting prompts with text-only input, including natural language
          tasks, multi-turn text and code chat, and code generation. It can
          output text and code.
      :param config: Optional. Configuration for Count Tokens.



   .. py:method:: create_cached_content(model, location, cached_content_config = None, project_id = PROVIDE_PROJECT_ID)

      Create CachedContent to reduce the cost of requests containing repeat content.

      :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
      :param location: Required. The ID of the Google Cloud location that the service belongs to.
      :param model: Required. The name of the publisher model to use for cached content.
      :param cached_content_config: Optional. Configuration of the Cached Content.



.. py:class:: GenAIGeminiAPIHook(gemini_api_key, **kwargs)

   Bases: :py:obj:`airflow.providers.google.common.hooks.base_google.GoogleBaseHook`


   Class for Google Cloud Generative AI Gemini Developer API hook.


   .. py:attribute:: gemini_api_key


   .. py:method:: get_genai_client()


   .. py:method:: get_batch_job(job_name)

      Get batch job using Gemini Batch API.

      :param job_name: Required. Batch job name.



   .. py:method:: list_batch_jobs(list_batch_jobs_config = None)

      Get list of batch jobs using Gemini Batch API.

      :param list_batch_jobs_config: Optional. Configuration of returned iterator.



   .. py:method:: create_batch_job(model, source, create_batch_job_config = None)

      Create batch job using Gemini Batch API to process large-scale, non-urgent tasks.

      :param model: Required. Gemini model name to process requests.
      :param source: Required. Requests that will be sent to chosen model.
          Can be in format of Inline requests or file name.
      :param create_batch_job_config: Optional. Configuration parameters for batch job.



   .. py:method:: delete_batch_job(job_name)

      Delete batch job using Gemini Batch API.

      :param job_name: Required. Batch job name.



   .. py:method:: cancel_batch_job(job_name)

      Cancel batch job using Gemini Batch API.

      :param job_name: Required. Batch job name.



   .. py:method:: create_embeddings(model, source, create_embeddings_config = None)

      Create batch job for embeddings using Gemini Batch API to process large-scale, non-urgent tasks.

      :param model: Required. Gemini model name to process requests.
      :param source: Required. Requests that will be sent to chosen model.
          Can be in format of Inline requests or file name.
      :param create_embeddings_config: Optional. Configuration parameters for embeddings batch job.



   .. py:method:: upload_file(path_to_file, upload_file_config = None)

      Upload file for batch job or embeddings batch job using Gemini Files API.

      :param path_to_file: Required. Path to file on local filesystem.
      :param upload_file_config: Optional. Configuration for file upload.



   .. py:method:: get_file(file_name)

      Get file's metadata for batch job or embeddings batch job using Gemini Files API.

      :param file_name: Required. Name of the file in Gemini Files API.



   .. py:method:: download_file(file_name)

      Download file for batch job or embeddings batch job using Gemini Files API.

      :param file_name: Required. Name of the file in Gemini Files API.



   .. py:method:: list_files()

      List files for stored in Gemini Files API.



   .. py:method:: delete_file(file_name)

      Delete file from Gemini Files API storage.

      :param file_name: Required. Name of the file in Gemini Files API.



